--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="nav_header_title" translatable="false">EdXp Manager</string>
     <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="nav_title_about">About</string>
-    <string name="nav_title_apps">Applications</string>
+    <string name="nav_title_black_list">Black/White List</string>
+    <string name="nav_title_compat_list">Compat List</string>
     <string name="nav_title_settings">Settings</string>
     <string name="white_list_mode_title">White List mode</string>
     <string name="title_white_list">White List</string>
@@ -21,4 +22,6 @@
     <string name="open_link_failed_toast">No application found to open the link.</string>
     <string name="pref_title_force_global">Force global mode</string>
     <string name="pref_force_global_summary">When turned on, ignore black list and white list and load modules only once on boot</string>
+    <string name="title_compat_list">Compat List</string>
+    <string name="menu_title_compat_mode">About Compat mode</string>
 </resources>
