--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -17,7 +17,7 @@
     <string name="edxp_source_code_title">EdXposed 源代码</string>
     <string name="open_link_failed_toast">无法找到可以打开链接的应用</string>
     <string name="pref_title_force_global">强制全局模式</string>
-    <string name="pref_force_global_summary">启用后，忽略黑名单和白名单设置，仅在系统启动时加载一次模块列表</string>
+    <string name="pref_force_global_summary">(重启生效) 启用后，忽略黑名单和白名单设置，仅在系统启动时加载一次模块列表</string>
     <string name="title_compat_list">兼容名单</string>
     <string name="menu_title_compat_mode">关于兼容模式</string>
 </resources>
