Add a debugging switch to enable instant modules loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,10 @@
     <string name="app_source_code_title">App source code</string>
     <string name="edxp_source_code_title">EdXposed source code</string>
     <string name="open_link_failed_toast">No application found to open the link.</string>
-    <string name="pref_title_force_global">Force global mode</string>
-    <string name="pref_force_global_summary">(Reboot needed) When turned on, ignore black list and white list and load modules only once on boot</string>
-    <string name="title_compat_list">Compat List</string>
+    <string name="pref_title_force_global">Global mode</string>
+    <string name="pref_title_dynamic_modules">Instant module list</string>
+    <string name="pref_force_global_summary">(Reboot needed) When turned on, ignore both black list and white list</string>
+    <string name="pref_dynamic_modules_summary">(Reboot needed) When turned on, load latest activated module list on each app process started</string>
+    <string name="title_compat_list">Compat mode</string>
     <string name="menu_title_compat_mode">About Compat mode</string>
 </resources>
