--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -4,7 +4,7 @@
     <string name="nav_title_black_list">黑/白名单</string>
     <string name="nav_title_settings">设置</string>
     <string name="white_list_mode_title">白名单模式</string>
-    <string name="nav_title_compat_list">兼容名单</string>
+    <string name="nav_title_compat_list">兼容模式</string>
     <string name="title_white_list">白名单</string>
     <string name="title_black_list">黑名单</string>
     <string name="add_package_failed">修改失败，请检查 Root 权限</string>
@@ -16,8 +16,10 @@
     <string name="app_source_code_title">App 源代码</string>
     <string name="edxp_source_code_title">EdXposed 源代码</string>
     <string name="open_link_failed_toast">无法找到可以打开链接的应用</string>
-    <string name="pref_title_force_global">强制全局模式</string>
-    <string name="pref_force_global_summary">(重启生效) 启用后，忽略黑名单和白名单设置，仅在系统启动时加载一次模块列表</string>
-    <string name="title_compat_list">兼容名单</string>
+    <string name="pref_title_force_global">全局模式</string>
+    <string name="pref_title_dynamic_modules">即时模块列表</string>
+    <string name="pref_force_global_summary">(重启后生效) 启用后，忽略所有黑名单和白名单设置</string>
+    <string name="pref_dynamic_modules_summary">(重启后生效) 启用后，每个APP进程启动时重新加载最新的模块列表</string>
+    <string name="title_compat_list">兼容模式</string>
     <string name="menu_title_compat_mode">关于兼容模式</string>
 </resources>
